	- Stop looping forever when writing to broken connections. Patched by
	Martin Mares. (Closes RT#44170)
	- Patches from "Martijn van Beers via RT" to add SSL_SENT_SHUTDOWN
	and SSL_RECEIVED_SHUTDOWN, remove broken URLs,
	and to fix some documentation issues.
	- Various changes to build with OpenSSL 1.0 beta1:
	SSL_SESSION_cmp has been removed
	return type of SSL_CTX_sessions changed in an ugly way
	- Fixed a build problem reported by SISYPHUS:
	On Windows Vista64, ActivePerl 5.10.0 (build 1004, x64), running 'nmake
	test', the process hangs forever when it comes to building the test
	executable (as the executable fails to build).
	- Applied patch from ecmenifee in to improve handling of errors in
	ssl_write_all. (Closes RT#48132)
	- Patch to permit compile and testing on OS/2 submitted by Ilya
	Zakharevich.
	- Fixed compile problems with openssl-1.0.0-beta3 due to MD2 now being
	optional. Reported by paul [...] city-fan.org.
	- Fixed compile problems with openssl-0.9.7 and earlier with undefined
	symbol EVP_sha256. Reported by paul [...] city-fan.org.
	- Fixed a typo reported by Dan Dascalescu.
	- added RIPEMD160 digest function.  Patch provided by dkg.

1.37	- Added X509_get_fingerprint, contributed by Thierry Walrant (with
	minor changes die to the fact that stricmp is not avialable. Cert
	types must be lowercase. Also added test to 07_sslecho.t
	- Added suport for SSL_CTX_set1_param, SSL_set1_param,
	selected X509_VERIFY_PARAM_* OBJ_* functions. Added new test
	t/local/36_verify.t
	- Fixed the prototype for randomize(), it missed one arg, and errors
	are reported with perl 5.10.1 on Windows
	- Fixed an uninitialized value warning in $Net::SSLeay::proxyauth,
	reported by Andrey Rikov.
	- Update so net-ssleay will compile if SSLV2 is not present. Patch
	from Chris Butler.
	- Fixed a problem where sslcat (and possibly other functions) expect RSA keys and will not
	load DSA keys for client certificates. Reported and patched by "Jesse DeFer via RT"
#EOF